--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "type": "git",
     "url": "https://github.com/parnasmi/kennekt-static-landing.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "eleventy",
+    "11ty",
+    "tailwind"
+  ],
+  "author": "Ilhom Maksadkulov",
+  "license": "Unlicense",
+  "homepage": "https://github.com/parnasmi/kennect-static-landing/#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
     "autoprefixer": "^10.4.0",
@@ -27,6 +32,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.1.0",
     "postcss-nested": "^5.0.6",
+    "prettier": "2.5.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.7"
   }
